CRUD vehicle (not tested)

--- a/telas/cadastroCarro.html
+++ b/telas/cadastroCarro.html
@@ -22,26 +22,26 @@
 
         <form>
               <div class="mb-3">
-                <label for="userCPF" class="form-label">Placa</label>
-                <input type="text" id="userCPF" class="form-control" placeholder="Digite a placa de seu carro" required>
+                <label for="carPlate" class="form-label">Placa</label>
+                <input type="text" id="carPlate" class="form-control" name="plate" placeholder="Digite a placa de seu carro" required>
               </div>
 
               <div class="mb-3">
-                <label for="userEmail" class="form-label">Marca</label>
-                <input type="email" id="userEmail" class="form-control" placeholder="Digite a marca de seu carro" required>
+                <label for="carBrand" class="form-label">Marca</label>
+                <input type="text" id="carBrand" class="form-control" name="brand" placeholder="Digite a marca de seu carro" required>
               </div>
 
               <div class="mb-3">
-                <label for="userConfirmarEmail" class="form-label">Modelo</label>
-                <input type="email" id="userConfirmarEmail" class="form-control" placeholder="Digite o modelo de seu carro" required>
+                <label for="carModel" class="form-label">Modelo</label>
+                <input type="text" id="carModel" class="form-control" name="model" placeholder="Digite o modelo de seu carro" required>
               </div>
 
               <div class="mb-3">
-                <label for="senhaInput" class="form-label">Ano</label>
-                <input type="password" id="senhaInput" class="form-control" placeholder="Digite o ano de seu carro" required>
+                <label for="carYear" class="form-label">Ano</label>
+                <input type="number" id="carYear" class="form-control" name="year" placeholder="Digite o ano de seu carro" required>
               </div>
              
-              <button type="submit" id="criarConta" class="btn btn-primary button" disabled>CADASTRAR CARRO</button>
+              <button type="submit" id="createCar" class="btn btn-primary button" disabled>CADASTRAR CARRO</button>
           </form>
         
     </main>
