desisto do front (por enquanto)

--- a/telas/homePage.html
+++ b/telas/homePage.html
@@ -31,7 +31,6 @@
                 </div>
             </div>
         </section>
-        <hr><hr><hr><hr>
         <section class="">
             <div class="rodados">
                 <div class="orange-label">
@@ -46,6 +45,15 @@
         </section>
 
     </main>
+    <footer>
+        <ul class="barraTarefas">
+            <li><img src="../public/img/car.png" alt="cars"></li>
+            <li><img src="../public/img/warning.png" alt="warning"></li>
+            <li><img src="../public/img/home.png" alt="home"></li>
+            <li><img src="../public/img/notification.png" alt="notifications"></li>
+            <li><img src="../public/img/user.png" alt="profile"></li>
+        </ul>
+    </footer>
 
     
 </body>
